# libiio

cmake/: max32690.cmake
no-OS/: CMakeLists.txt  backend.c
no-OS/drivers/: iio_adc.c  iio_adc.h
no-OS/iiod/: network.c  uart.c  usb.c
no-OS/include/: iio_device.h
no-OS/samples/iiod/src/: main.c
no-OS/samples/iiod/src/platform/maxim/: parameters.h
